force-app/main/default/objects/Risk_Signal_Change__e/Risk_Signal_Change__e.object-meta.xml
<CustomObject>
    <label>Risk Signal Change</label>
    <pluralLabel>Risk Signal Changes</pluralLabel>
</CustomObject>