force-app/main/default/objects/Risk_Signal_Change__e/fields/Customer_Key__c.field-meta.xml
<CustomField>
    <fullName>Customer_Key__c</fullName>
    <label>Customer Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>