force-app/main/default/objects/Risk_Signal_Change__e/fields/Risk_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Risk_Case_Id__c</fullName>
    <label>Risk Case Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>