force-app/main/default/objects/Risk_Signal_Change__e/fields/Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score__c</fullName>
    <label>Risk Score</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>